--- a/pkg/decode/decode.gen.go.tmpl
+++ b/pkg/decode/decode.gen.go.tmpl
@@ -16,7 +16,7 @@ func (c *Common) {{$s.short}}{{$i}}{{$e.short}}() {{$s.type}} { return c.{{$s.sh
 // Field{{$s.short}}{{$e.short}} read a nBits {{$s}} {{$e.desc}} integer and add a field
 func (c *Common) Field{{$s.short}}{{$e.short}}(name string, nBits int64) {{$s.type}} { return c.Field{{$s.short}}E(name, nBits, bitbuf.{{$e.long}}) }
 {{- range $i := xrange $e.from 64}}
-// Field{{$s.short}}{{$e.short}}{{$i}} read {{$i}} bit {{$s.desc}} {{$e.desc}} integer and add a field
+// Field{{$s.short}}{{$i}}{{$e.short}} read {{$i}} bit {{$s.desc}} {{$e.desc}} integer and add a field
 func (c *Common) Field{{$s.short}}{{$i}}{{$e.short}}(name string) {{$s.type}} { return c.Field{{$s.short}}E(name, {{$i}}, bitbuf.{{$e.long}}) }
 {{- end}}
 {{- end}}
