--- a/pkg/decode/decode_gen.go.tmpl
+++ b/pkg/decode/decode_gen.go.tmpl
@@ -1,23 +1,21 @@
 // Generated with decode_gen.go.tmpl
 package decode
 
-import "fq/pkg/bitbuf"
-
 {{- range $s := array (map "short" "S" "desc" "signed" "type" "int64") (map "short" "U" "desc" "unsigned" "type" "uint64")}}
 
-{{- range $e := array (map "short" "" "long" "BigEndian" "desc" "big-endian" "from" 1) (map "short" "BE" "long" "BigEndian" "desc" "big-endian" "from" 8)  (map "short" "LE" "long" "LittleEndian" "desc" "little-endian" "from" 8)}}
+{{- range $e := array (map "short" "" "var" "d.Endian" "desc" "big-endian" "from" 1) (map "short" "BE" "var" "BigEndian" "desc" "big-endian" "from" 8)  (map "short" "LE" "var" "LittleEndian" "desc" "little-endian" "from" 8)}}
 // {{$s.short}} read a nBits {{$s.desc}} {{$e.desc}} integer
-func (d *D) {{$s.short}}{{$e.short}}(nBits int64) {{$s.type}} { return d.{{$s.short}}E(nBits, bitbuf.{{$e.long}}) }
+func (d *D) {{$s.short}}{{$e.short}}(nBits int64) {{$s.type}} { return d.{{$s.short}}E(nBits, {{$e.var}}) }
 {{- range $i := xrange $e.from 64}}
 // {{$s.short}}{{$i}}{{$e.short}} read {{$i}} bit {{$s.desc}} {{$e.desc}} integer
-func (d *D) {{$s.short}}{{$i}}{{$e.short}}() {{$s.type}} { return d.{{$s.short}}E({{$i}}, bitbuf.{{$e.long}}) }
+func (d *D) {{$s.short}}{{$i}}{{$e.short}}() {{$s.type}} { return d.{{$s.short}}E({{$i}}, {{$e.var}}) }
 {{- end}}
 
 // Field{{$s.short}}{{$e.short}} read a nBits {{$s}} {{$e.desc}} integer and add a field
-func (d *D) Field{{$s.short}}{{$e.short}}(name string, nBits int64) {{$s.type}} { return d.Field{{$s.short}}E(name, nBits, bitbuf.{{$e.long}}) }
+func (d *D) Field{{$s.short}}{{$e.short}}(name string, nBits int64) {{$s.type}} { return d.Field{{$s.short}}E(name, nBits, {{$e.var}}) }
 {{- range $i := xrange $e.from 64}}
 // Field{{$s.short}}{{$i}}{{$e.short}} read {{$i}} bit {{$s.desc}} {{$e.desc}} integer and add a field
-func (d *D) Field{{$s.short}}{{$i}}{{$e.short}}(name string) {{$s.type}} { return d.Field{{$s.short}}E(name, {{$i}}, bitbuf.{{$e.long}}) }
+func (d *D) Field{{$s.short}}{{$i}}{{$e.short}}(name string) {{$s.type}} { return d.Field{{$s.short}}E(name, {{$i}}, {{$e.var}}) }
 {{- end}}
 {{- end}}
 {{- end}}
