--- a/pkg/decode/decode_readers_gen.go.tmpl
+++ b/pkg/decode/decode_readers_gen.go.tmpl
@@ -8,14 +8,14 @@ package decode
 {{- range $e := array (map "short" "" "var" "d.Endian" "desc" "big-endian" "from" 1) (map "short" "BE" "var" "BigEndian" "desc" "big-endian" "from" 8)  (map "short" "LE" "var" "LittleEndian" "desc" "little-endian" "from" 8)}}
 
 // {{$s.short}}{{$e.short}} read a nBits {{$s.desc}} {{$e.desc}} integer
-func (d *D) {{$s.short}}{{$e.short}}(nBits int64) {{$s.type}} { return d.{{$s.short}}E(nBits, {{$e.var}}) }
+func (d *D) {{$s.short}}{{$e.short}}(nBits int) {{$s.type}} { return d.{{$s.short}}E(nBits, {{$e.var}}) }
 {{- range $bits := xrange $e.from 64}}
 // {{$s.short}}{{$bits}}{{$e.short}} read {{$bits}} bit {{$s.desc}} {{$e.desc}} integer
 func (d *D) {{$s.short}}{{$bits}}{{$e.short}}() {{$s.type}} { return d.{{$s.short}}E({{$bits}}, {{$e.var}}) }
 {{- end}}
 
 // Field{{$s.short}}{{$e.short}} read a nBits {{$s.desc}} {{$e.desc}} integer and add a field
-func (d *D) Field{{$s.short}}{{$e.short}}(name string, nBits int64) {{$s.type}} { return d.Field{{$s.short}}E(name, nBits, {{$e.var}}) }
+func (d *D) Field{{$s.short}}{{$e.short}}(name string, nBits int) {{$s.type}} { return d.Field{{$s.short}}E(name, nBits, {{$e.var}}) }
 {{- range $bits := xrange $e.from 64}}
 // Field{{$s.short}}{{$bits}}{{$e.short}} read {{$bits}} bit {{$s.desc}} {{$e.desc}} integer and add a field
 func (d *D) Field{{$s.short}}{{$bits}}{{$e.short}}(name string) {{$s.type}} { return d.Field{{$s.short}}E(name, {{$bits}}, {{$e.var}}) }
