--- a/pkg/decode/decode_readers_gen.go.tmpl
+++ b/pkg/decode/decode_readers_gen.go.tmpl
@@ -5,7 +5,7 @@ package decode
 // Integer readers
 
 {{- range $s := array (map "short" "S" "desc" "signed" "type" "int64") (map "short" "U" "desc" "unsigned" "type" "uint64")}}
-{{- range $e := array (map "short" "" "var" "d.Endian" "desc" "big-endian" "from" 1) (map "short" "BE" "var" "BigEndian" "desc" "big-endian" "from" 8)  (map "short" "LE" "var" "LittleEndian" "desc" "little-endian" "from" 8)}}
+{{- range $e := array (map "short" "" "var" "d.Endian" "desc" "current endian" "from" 1) (map "short" "BE" "var" "BigEndian" "desc" "big-endian" "from" 8)  (map "short" "LE" "var" "LittleEndian" "desc" "little-endian" "from" 8)}}
 
 // {{$s.short}}{{$e.short}} read a nBits {{$s.desc}} {{$e.desc}} integer
 func (d *D) {{$s.short}}{{$e.short}}(nBits int) {{$s.type}} { return d.{{$s.short}}E(nBits, {{$e.var}}) }
@@ -28,12 +28,17 @@ func (d *D) Field{{$s.short}}{{$bits}}{{$e.short}}(name string) {{$s.type}} { re
 // Float readers
 
 
-{{ range $e := array (map "short" "" "var" "d.Endian" "desc" "big-endian") (map "short" "BE" "var" "BigEndian" "desc" "big-endian")  (map "short" "LE" "var" "LittleEndian" "desc" "little-endian")}}
+{{ range $e := array (map "short" "" "var" "d.Endian" "desc" "current endian") (map "short" "BE" "var" "BigEndian" "desc" "big-endian")  (map "short" "LE" "var" "LittleEndian" "desc" "little-endian")}}
 
+// F{{$e.short}} read a nBits {{$e.desc}} float
+func (d *D) F{{$e.short}}(nBits int) float64 { return d.FE(nBits, {{$e.var}}) }
 {{- range $bits := array 16 32 64}}
 // F{{$bits}}{{$e.short}} read {{$bits}} bit {{$e.desc}} float
 func (d *D) F{{$bits}}{{$e.short}}() float64 { return d.FE({{$bits}}, {{$e.var}}) }
 {{- end}}
+
+// FieldF{{$e.short}} read a nBits {{$e.desc}} float and add a field
+func (d *D) FieldF{{$e.short}}(name string, nBits int) float64 { return d.FieldFE(name, nBits, {{$e.var}}) }
 
 {{- range $bits := array 16 32 64}}
 // FieldF{{$bits}}{{$e.short}} read {{$bits}} bit {{$e.desc}} float and add a field
