--- a/pkg/decode/decode_decoder_gen.go.tmpl
+++ b/pkg/decode/decode_decoder_gen.go.tmpl
@@ -1,12 +1,13 @@
-// +build ignore
+//+build ignore
 
+package decode
 
 {{- range $t := $.try }}
 {{- range $h := $.how }}
 {{- range $w := $.where }}
 
 func (d *D) FieldDecode{{$t.name}}{{$h.name}}{{$w.name}}(nBits int) float64 {
-    return
+    return 0
 }
 
 {{- end}}
