--- a/pkg/decode/decode_decoder_gen.go.tmpl
+++ b/pkg/decode/decode_decoder_gen.go.tmpl
@@ -6,7 +6,7 @@ package decode
 {{- range $h := $.how }}
 {{- range $w := $.where }}
 
-func (d *D) FieldDecode{{$t.name}}{{$h.name}}{{$w.name}}(nBits int) float64 {
+func (d *D) FieldFormat{{$t.name}}{{$h.name}}{{$w.name}}(nBits int) float64 {
     return 0
 }
 
