interp: Make to{actual,sym} behave similar to tovalue
Before if you did toactual it behaved differently and even gave error for
a scalar that only had actual value set. Now both to{actal,sym} works
similar to tovalue but will force if actual or sym value should be used.

--- a/pkg/interp/testdata/value_t.fqtest.tmpl
+++ b/pkg/interp/testdata/value_t.fqtest.tmpl
@@ -1,6 +1,5 @@
-/test.mp3:
 $ CMD
-PROMPT> EXPR | ., tovalue, type, length?
+PROMPT> EXPR | ., tovalue, toactual, tosym, type, length?
 PROMPT> EXPR[0] | ., type, length?
 PROMPT> EXPR[-1000] | ., type, length?
 PROMPT> EXPR[1000] | ., type, length?
@@ -21,7 +20,8 @@ PROMPT> EXPR._start | ., type, length?
 PROMPT> EXPR._stop | ., type, length?
 PROMPT> EXPR._len | ., type, length?
 PROMPT> EXPR._name | ., type, length?
-PROMPT> EXPR._symbol | ., type, length?
+PROMPT> EXPR._actual | ., type, length?
+PROMPT> EXPR._sym | ., type, length?
 PROMPT> EXPR._description | ., type, length?
 PROMPT> EXPR._path | ., type, length?
 PROMPT> EXPR._bits | ., type, length?
